<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">罗非鱼产业预警系统</string>
    <string name="ActivityMainTitle">>罗非鱼产业预警系统</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_catagory">第一页</string>
    <string name="main_navigation_car">第二页</string>
    <string name="main_code_buy">第三页</string>
    <string name="main_navigation_more">第四页</string>
    <string name="app_close">关闭应用程序</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_ok">确 定</string>
    <string name="cart_item_hint">购物车还是空的,快去选购吧~ !</string>
    <string name="first_page">塘口价</string>
    <string name="second_page">进口价</string>
    <string name="third_page">批发</string>
    <string name="forth_page">销售</string>
    <string name="more_page">其它</string>
    <string name="filter_desc">比较</string>

</resources>